--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 		<h1>Outro titulo</h1>
 		<p>Aprendendo Git</p>
 		<p>Novo paragrafo</p>
+		<p>Novo paragrafo para o clone</p>
 	</body>
 </html>
